--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongo-seeding": "^3.4.1",
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.27",
