--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sunny_shelter",
+  "name": "upsell",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "start:dev": "nodemon",
